--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,65 +12,86 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="8dp">
+        android:paddingTop="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="30dp"
+            android:layout_marginHorizontal="5dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@color/yellow"
                 android:text="Sign Up"
                 android:textSize="30sp"/>
 
             <TextView
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:text="Email"
                 android:textSize="20sp"/>
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_marginTop="5dp"
+                android:id="@+id/signUp_ETX_email"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:text="expamle@mail.com"/>
+                android:textColor="@color/light_gray"
+                android:textSize="18sp"
+                android:autofillHints=""
+                android:hint="expamle@mail.com"
+                android:inputType="textEmailAddress"
+                tools:ignore="LabelFor" />
             <TextView
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:text="Password"
                 android:textSize="20sp"/>
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_marginTop="5dp"
+                android:id="@+id/signUp_ETX_password"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:inputType="textPassword"
-                android:ellipsize="start"/>
+                android:ellipsize="start"
+                android:hint="Your Password"
+                android:autofillHints=""
+                tools:ignore="LabelFor"/>
             <TextView
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:text="User NAme"
                 android:textSize="20sp"/>
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:ellipsize="start"
-                android:text="your nic"/>
-            <Button
+                android:layout_marginTop="5dp"
+                android:id="@+id/signUp_ETX_userName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/light_gray"
+                android:textSize="18sp"
+                android:autofillHints=""
+                android:hint="Username"
+                android:inputType="text"
+                tools:ignore="LabelFor" />
+            <Button
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_heavy"
+                app:backgroundTint="@color/yellow"
                 android:text="Continue"
                 android:textSize="20sp"/>
 
@@ -78,10 +99,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.15"
-            android:orientation="horizontal"
-            android:paddingHorizontal="10dp">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingHorizontal="16dp"
+            android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -89,13 +110,15 @@
                 android:text="Have an Account?"
                 android:textSize="20sp"/>
             <Button
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:backgroundTint="@color/Transparent"
+                android:textColor="@color/yellow"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_marginHorizontal="10dp"
                 android:background="@android:color/transparent"
                 android:text="Sign In"
-                android:textSize="10sp"/>
+                android:textSize="20sp"/>
 
         </LinearLayout>
     </LinearLayout>
