--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -43,16 +43,17 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingVertical="30dp"
-                android:paddingLeft="60dp"
-                >
-                <ImageButton
+                android:paddingStart="60dp"
+                tools:ignore="RtlSymmetry">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/gamePage_IMG_profile"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:scaleType="fitCenter"
-                    android:background="@android:color/transparent"
-                    app:srcCompat="@drawable/userlogo">
-                </ImageButton>
+                    android:src="@drawable/profile"
+                    app:civ_border_color="@color/yellow"
+                    app:civ_border_width="1dp">
+                </de.hdodenhof.circleimageview.CircleImageView>
             </LinearLayout>
 
         </LinearLayout>
@@ -67,6 +68,7 @@
                 android:layout_weight="0.2"
                 android:paddingVertical="5dp">
                 <ImageButton
+                    android:id="@+id/gamePage_IMGB_favorite"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -74,6 +76,7 @@
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/add_fav_star"/>
                 <TextView
+                    android:id="@+id/gamePage_TXT_favorite"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="14"
@@ -86,8 +89,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1.5"
+                android:background="@color/blue_heavy"
+                android:padding="10dp"
                 android:orientation="horizontal">
                 <ImageView
+                    android:id="@+id/gamePage_IMG_gameCover"
                     android:layout_width="150dp"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
@@ -102,6 +108,7 @@
                     android:orientation="vertical"
                     tools:ignore="NestedWeights">
                     <TextView
+                        android:id="@+id/gamePage_TXT_name"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -110,6 +117,7 @@
                         android:textColor="@color/white"/>
 
                     <TextView
+                        android:id="@+id/gamePage_TXT_gameDes"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="4"
@@ -132,6 +140,7 @@
                             android:textColor="@color/yellow"/>
 
                         <TextView
+                            android:id="@+id/gamePage_TXT_releaseData"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="15sp"
