--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="yellow">#FFEB3B</color>
+    <color name="yellow">#ffd700</color>
+    <color name="light_gray">#A5A5A5</color>
+    <color name="Transparent">#00000000</color>
+    <color name="blue_heavy">#022c43</color>
+    <color name="blue_medium">#053f5e</color>
+    <color name="blue_light">#115173</color>
+
 </resources>
