--- a/app/src/main/res/layout/list_companies.xml
+++ b/app/src/main/res/layout/list_companies.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/company_IMG_logo"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -32,10 +32,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="50.26$"
+            android:text=""
             android:textSize="15dp"
             android:textColor="@color/yellow"
-            android:layout_margin="30dp"
+            android:layout_margin="20dp"
             android:gravity="center"/>
 
     </LinearLayout>
