--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -88,6 +88,7 @@
                 tools:ignore="LabelFor" />
             <Button
                 android:layout_marginTop="20dp"
+                android:id="@+id/signUp_BTN_continue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/blue_heavy"
@@ -110,6 +111,7 @@
                 android:text="Have an Account?"
                 android:textSize="20sp"/>
             <Button
+                android:id="@+id/signUp_BTN_signIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/Transparent"
