--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="blue_medium">#053f5e</color>
     <color name="blue_light">#115173</color>
 
+    <color name="red_warning_error">#FF4444</color>
 </resources>
